# chatdata-mcp-server

./: README.md  main.py  pyproject.toml
prompts/: __init__.py  code_review.py  content_generator.py  simple.py  utils.py
resources/: README.md  __init__.py  binary_resources.py  dynamic_resources.py  text_resources.py
server/: __init__.py  server.py
tools/: __init__.py  browser_use.py  calculator.py  code_formatter.py  data_converter.py  echo.py  fetch.py  http_client.py  image_gen.py  ip_info.py  pdf_llm.py  postgres.py  text_summary.py  translator.py  weather.py  web_scraper.py
