[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatdata-mcp-server"
version = "0.1.0"
description = "MCP服务器，提供多种工具功能"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ChatData Team", email = "xiaozhongcheng2022@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "ai", "tools", "prompt", "server"]
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.24.0",
    "black>=23.3.0",
    "autopep8>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "tabulate>=0.9.0",
    "bs4>=0.0.2",
    "numpy>=2.2.3",
    "sympy>=1.13.3",
    "pyyaml>=6.0.2",
    "xmltodict>=0.14.2",
    "browser-use>=0.1.40",
]

[project.urls]
"Homepage" = "https://github.com/xiaozhch5/chatdata-mcp-server"

[project.scripts]
server = "server.server:main"
mcp-server = "server.server:main"

[tool.setuptools]
packages = ["server", "tools", "prompts"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests"]
